fix username on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -152,8 +152,4 @@ a {
     width: 200px;
     height: 200px;
   }
-
-  #user-name {
-    text-align: center;
-  }
 }
